# scud

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.txt  fleet.toml  rustfmt.toml
.cargo/: config.toml
.github/: config.yml  deadpendency.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
scud_core/: Cargo.toml
scud_core/src/: cli.rs  commands.rs  helpers.rs  lib.rs  logging.rs  process_commands.rs
scud_core/src/cli/: branching.rs  cli.rs  information.rs  version_control.rs
scud_core/src/commands/: branch.rs  commit.rs  diff.rs  feature.rs  healthcheck.rs  info.rs  init.rs  push.rs  setup.rs  stage.rs  state.rs  unstage.rs
scud_core/src/commands/branch/: branch.rs  delete.rs  executors.rs  list.rs  rename.rs
scud_core/src/commands/branch/list/: executors.rs  list.rs
scud_core/src/commands/cap/: README.md
scud_core/src/commands/commit/: README.md  commit.rs  executors.rs  helpers.rs  logging.rs
scud_core/src/commands/diff/: diff.rs  executors.rs
scud_core/src/commands/healthcheck/: healthcheck.rs  helpers.rs  logging.rs
scud_core/src/commands/info/: codebase.rs  info.rs
scud_core/src/commands/info/codebase/: codebase.rs
scud_core/src/commands/info/system/: system.rs
scud_core/src/commands/init/: init.rs
scud_core/src/commands/push/: README.md  executors.rs  push.rs
scud_core/src/commands/setup/: vcs_git.rs
scud_core/src/commands/stage/: README.md  executors.rs  logging.rs  stage.rs
scud_core/src/commands/state/: executors.rs  helpers.rs  state.rs
scud_core/src/commands/unstage/: README.md  executors.rs  unstage.rs
scud_core/src/commands/update/: executors.rs  update.rs
scud_core/src/logging/: diagnostics.rs  general.rs  helpers.rs
src/: main.rs
tools/hooks/: search-term.hook
