[package]
name = "scud"
description = "The all-in-one tool for streamlining the many version control processes of your development workflow. WIP"
authors = ["Josh Kersey <pulanski12@gmail.com>"]
license = "MIT"
version = "0.11.0"
edition = "2021"
homepage = "https://github.com/pulanski/scud"
repository = "https://github.com/pulanski/scud"
keywords = ["cli", "vcs", "git", "github", "gitlab"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
scud_core = { path = "scud_core", version = "0.11.0" }
