[package]
name = "scud"
description = "A tool for streamlining the many version control processes of your development workflow written with an emphasis on ease-of-use and expressive usage diagnostics. WIP"
authors = ["Josh Kersey <pulanski12@gmail.com>"]
license = "MIT"
version = "0.13.0"
edition = "2021"
homepage = "https://github.com/pulanski/scud"
repository = "https://github.com/pulanski/scud"
keywords = ["cli", "vcs", "git", "github", "gitlab"]
categories = [
  "command-line-interface",
  "command-line-utilities",
  "development-tools",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
scud_core = { path = "scud_core", version = "0.13.0" }
